# enterprise-rag-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEX_TASK_00.md  CODEX_TASK_01.md  CODEX_TASK_02.md  Makefile  PROJECT_SPEC.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/src/app/: __init__.py  seed.py
apps/api/src/enterprise_rag_api/: dependencies.py  ingestion_dependencies.py  main.py  middleware.py  request_context.py  schemas.py  seed.py
apps/indexer/src/enterprise_rag_indexer/: __init__.py  main.py
apps/worker/src/enterprise_rag_worker/: __main__.py  main.py
docs/architecture/: phase-00.md  phase-01.md  phase-02.md
infra/compose/: README.md
infra/docker/: api.Dockerfile  worker.Dockerfile
infra/migrations/: README.md  env.py
infra/migrations/versions/: 20260320_0001_phase_01_initial_schema.py  20260320_0002_phase_02_ingestion_metadata.py
tests/: __init__.py  conftest.py  support.py
tests/unit/: test_api_health.py  test_auth_api.py  test_ingestion_api.py  test_migrations.py  test_settings.py
